fix(client/ui): increase dialog height to prevent scrollbar

--- a/client/src/app/dialogs/delete-project/delete-project-dialog.component.css
+++ b/client/src/app/dialogs/delete-project/delete-project-dialog.component.css
@@ -1,5 +1,5 @@
 #main {
-    height: 7rem;
+    height: 9rem;
     width: 22.5rem;
     text-align: center;
 }
